--- a/html/newtab.html
+++ b/html/newtab.html
@@ -1,13 +1,29 @@
 <html>
-    <head>
+<head>
     <title>&lrm;</title>
     <style>
         body {
-            background-color: #242424;
+            color: #242424;
+            background-color: #242424;            
+        }
+        div {
+            font-size: 700%;
+            transition: all 1s;
+            position: absolute;
+            top: 75%;
+            right: 10%;
+            height: 150px; 
+            width: 300px; 
+        }
+        div:hover {
+            color: #1c1c1c;
         }
     </style>
-    </head>    
-    <body id="root">
-        <script src="../js/newtab.js"></script>
-    </body>
+</head>
+
+<body id="root">
+    <div id="txt"></div>
+    <script src="../js/newtab.js"></script>
+</body>
+
 </html>
