--- a/html/newtab.html
+++ b/html/newtab.html
@@ -4,7 +4,7 @@
     <style>
         body {
             color: #242424;
-            background-color: #242424;            
+            background-color: #242424;                      
         }
         div {
             font-size: 700%;
@@ -13,7 +13,8 @@
             top: 75%;
             right: 10%;
             height: 150px; 
-            width: 400px; 
+            width: 400px;
+            user-select: none;
         }
         div:hover {
             color: #1c1c1c;
