--- a/html/newtab.html
+++ b/html/newtab.html
@@ -13,7 +13,7 @@
             top: 75%;
             right: 10%;
             height: 150px; 
-            width: 400px;
+            width: auto;
             user-select: none;
         }
         div:hover {
