--- a/html/popup.html
+++ b/html/popup.html
@@ -1,71 +1,8 @@
 <html>
+<title>Concentrate</title>
 
 <head>
-    <style>
-        body {
-            background-color: #242424;
-        }
-
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
-        }
-
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: gray;
-            -webkit-transition: .2s;
-            transition: .2s;
-        }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            -webkit-transition: .2s;
-            transition: .2s;
-        }
-
-        input:checked+.slider {
-            background-color: #2196F3;
-        }
-
-        input:focus+.slider {
-            box-shadow: 0 0 1px #2196F3;
-        }
-
-        input:checked+.slider:before {
-            -webkit-transform: translateX(26px);
-            -ms-transform: translateX(26px);
-            transform: translateX(26px);
-        }
-
-        .slider.round {
-            border-radius: 34px;
-        }
-
-        .slider.round:before {
-            border-radius: 50%;
-        }
-    </style>
-    </style>
+    <link rel="stylesheet" href="../css/index.css" type="text/css" />
 </head>
 
 <body>
@@ -74,8 +11,9 @@
             <input type="checkbox" value="true" id="DoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div style="margin-top:4px">Content DoubleClick</div>
-    </div>    
+        <div style="margin: 4px 0">DoubleClick</div>
+    </div>
     <script src="../js/popup.js"></script>
 </body>
+
 </html>
