--- a/html/options.html
+++ b/html/options.html
@@ -41,9 +41,8 @@
         <input type="text" id="color" name="color" />
     </div>
     <div style="text-align: right; margin-top: 5%; padding-right: 10%;">
-        <h1>Concentrate Options</h1>
+        <h1>Concentrate</h1>
     </div>
-
     <script src="../js/options.js"></script>
 </body>
 
