--- a/html/options.html
+++ b/html/options.html
@@ -39,8 +39,9 @@
         </label>
         <h3>Color</h3>
         <input type="text" id="color" name="color" />
+        <div id="indicator" class="color-indicator"></div>
     </div>
-    <div style="text-align: right; margin-top: 5%; padding-right: 10%;">
+    <div style="text-align: right; margin-top: 2%; padding-right: 10%;">
         <h1>Concentrate</h1>
     </div>
     <script src="../js/options.js"></script>
