--- a/html/options.html
+++ b/html/options.html
@@ -21,7 +21,7 @@
             <input type="checkbox" value="true" id="YouTubeInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>Ads Reduction</h3>
+        <h3>Ad Noise Reduction</h3>
         <label class="switch">
             <input type="checkbox" value="true" id="iFrameInputCheckbox">
             <span class="slider round"></span>
