--- a/html/newtab.html
+++ b/html/newtab.html
@@ -9,7 +9,7 @@
         div {
             font-size: 700%;
             transition: all 1s;
-            position: absolute;
+            position: fixed;
             top: 75%;
             right: 10%;
             height: 150px; 
