--- a/html/options.html
+++ b/html/options.html
@@ -41,7 +41,7 @@
         <input type="text" id="color" name="color" />
         <div id="indicator" class="color-indicator"></div>
     </div>
-    <div style="text-align: right; margin-top: 2%; padding-right: 10%;">
+    <div style="text-align: right; margin-top: 2%; padding-right: 10%;position: fixed; top:80%; left: 80%;">
         <h1>Concentrate</h1>
     </div>
     <script src="../js/options.js"></script>
