--- a/html/background.html
+++ b/html/background.html
@@ -1,1 +1,7 @@
-<script type="module" src="../js/background.js"></script>
+<html>
+
+<body style="background-color: black;">
+    <script type="module" src="../js/background.js"></script>
+</body>
+
+</html>
