--- a/html/options.html
+++ b/html/options.html
@@ -16,14 +16,19 @@
             <input type="checkbox" value="true" id="DoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>YouTube Noise Reduction</h3>
+        <h3>Remove Page Ads</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="YouTubeInputCheckbox">
+            <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>Ad Noise Reduction</h3>
+        <h3>Mute YouTube Video Ads</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="iFrameInputCheckbox">
+            <input type="checkbox" value="true" id="YouTubeAdsInputCheckbox">
+            <span class="slider round"></span>
+        </label>
+        <h3>Remove YouTube Comments</h3>
+        <label class="switch">
+            <input type="checkbox" value="true" id="YouTubeCommentsInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h2>New Tab</h2>
