--- a/html/options.html
+++ b/html/options.html
@@ -16,7 +16,7 @@
             <input type="checkbox" value="true" id="DoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>Remove Page Ads</h3>
+        <h3>Remove Ads</h3>
         <label class="switch">
             <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
             <span class="slider round"></span>
@@ -26,9 +26,9 @@
             <input type="checkbox" value="true" id="YouTubeAdsInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>Remove YouTube Comments</h3>
+        <h3>Remove Comments</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="YouTubeCommentsInputCheckbox">
+            <input type="checkbox" value="true" id="RemoveCommentsInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h2>New Tab</h2>
