--- a/html/options.html
+++ b/html/options.html
@@ -16,7 +16,7 @@
             <input type="checkbox" value="true" id="DoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <h3>Remove Ads</h3>
+        <h3>Remove Banner Ads</h3>
         <label class="switch">
             <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
             <span class="slider round"></span>
