--- a/html/options.html
+++ b/html/options.html
@@ -13,7 +13,7 @@
         <h2>Content</h2>
         <h3>FullScreen DoubleClick</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="DoubleClickInputCheckbox">
+            <input type="checkbox" value="true" id="ContentDoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h3>Remove Banner Ads</h3>
@@ -23,7 +23,7 @@
         </label>
         <h3>Mute YouTube Video Ads</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="YouTubeAdsInputCheckbox">
+            <input type="checkbox" value="true" id="YouTubeMuteInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h3>Remove Comments</h3>
@@ -34,12 +34,12 @@
         <h2>New Tab</h2>
         <h3>FullScreen Click</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="ClickInputCheckbox">
+            <input type="checkbox" value="true" id="NewTabClickInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h3>Hover to Reveal Time</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="ClockInputCheckbox">
+            <input type="checkbox" value="true" id="ShowClockInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h3>Color</h3>
