--- a/html/popup.html
+++ b/html/popup.html
@@ -27,6 +27,11 @@
             <input type="checkbox" value="true" id="RemoveCommentsInputCheckbox">
             <span class="slider round"></span>
         </label>
+        <div style="margin: 4px 0">AutoScroll</div>
+        <label class="switch">
+            <input type="checkbox" value="true" id="EnableAutoScrollInputCheckbox">
+            <span class="slider round"></span>
+        </label>
         <div style="margin: 4px 0">Keyboard</div>
         <div style="margin: 4px 0">
             AutoScroll: Ctrl + Space<br>
