--- a/html/options.html
+++ b/html/options.html
@@ -23,7 +23,7 @@
         </label>
         <h3>Mute YouTube Video Ads</h3>
         <label class="switch">
-            <input type="checkbox" value="true" id="YouTubeMuteInputCheckbox">
+            <input type="checkbox" value="true" id="MutingOnInputCheckbox">
             <span class="slider round"></span>
         </label>
         <h3>Remove Comments</h3>
