--- a/html/popup.html
+++ b/html/popup.html
@@ -19,7 +19,7 @@
         </label>
         <div style="margin: 4px 0">Mute YouTube Video Ads</div>
         <label class="switch">
-            <input type="checkbox" value="true" id="YouTubeMuteInputCheckbox">
+            <input type="checkbox" value="true" id="MutingOnInputCheckbox">
             <span class="slider round"></span>
         </label>
         <div style="margin: 4px 0">Remove Comments</div>
