--- a/html/popup.html
+++ b/html/popup.html
@@ -7,6 +7,7 @@
 
 <body>
     <div style="text-align: center;color: gray;font-size: 80%;">
+        <div>site.com</div>
         <div style="margin: 4px 0">FullScreen DoubleClick</div>
         <label class="switch">
             <input type="checkbox" value="true" id="ContentDoubleClickInputCheckbox">
@@ -17,24 +18,24 @@
             <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div style="margin: 4px 0">Mute YouTube Video Ads</div>
-        <label class="switch">
-            <input type="checkbox" value="true" id="MutingOnInputCheckbox">
-            <span class="slider round"></span>
-        </label>
         <div style="margin: 4px 0">Remove Comments</div>
         <label class="switch">
             <input type="checkbox" value="true" id="RemoveCommentsInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div style="margin: 4px 0">AutoScroll</div>
+        <div style="background: purple; height:5px; margin: 20px 5px 20px 5px; border-radius: 5px;"></div>
+        <div style="margin: 4px 0 4px 0">Mute YouTube Video Ads</div>
+        <label class="switch">
+            <input type="checkbox" value="true" id="MutingOnInputCheckbox">
+            <span class="slider round"></span>
+        </label>
+        <div style="margin: 20px 0 4px 0;">AutoScroll</div>
         <label class="switch">
             <input type="checkbox" value="true" id="EnableAutoScrollInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div style="margin: 4px 0">Keyboard</div>
         <div style="margin: 4px 0">
-            AutoScroll: Ctrl + Space<br>
+            On/Off: Ctrl + Space<br>
             Faster: Ctrl + Down<br>
             Slower: Ctrl + Up
         </div>
