--- a/html/popup.html
+++ b/html/popup.html
@@ -39,9 +39,9 @@
             Faster: Ctrl + Down<br>
             Slower: Ctrl + Up
         </div>
-        <div>
-            <div>-</div>
-            <div>+</div>
+        <div class="pedal">
+            <div class="btn"><span></span>-</div>
+            <div class="btn">+</div>
         </div>
     </div>
     <script src="../js/popup.js"></script>
