--- a/html/popup.html
+++ b/html/popup.html
@@ -40,8 +40,8 @@
             Slower: Ctrl + Up
         </div>
         <div class="pedal">
-            <div class="btn"><span></span>-</div>
-            <div class="btn">+</div>
+            <div class="btn" id="slower">-</div>
+            <div class="btn" id="faster">+</div>
         </div>
     </div>
     <script src="../js/popup.js"></script>
