--- a/html/popup.html
+++ b/html/popup.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="../css/index.css" type="text/css" />
 </head>
 
-<body>
-    <div style="text-align: center;color: gray;font-size: 80%;">
-        <div id="hostname" class="hostname">site.com</div>
+<body class="popup">
+    <div id="hostname" class="hostname">site.com</div>
+    <div id="content">
         <div class="title">DoubleClick</div>
         <label class="switch">
             <input type="checkbox" value="true" id="ContentDoubleClickInputCheckbox">
@@ -43,6 +43,19 @@
             <div class="btn" id="slower">-</div>
             <div class="btn" id="faster">+</div>
         </div>
+        <div class="noselect">&nbsp;</div>
+    </div>
+    <div id="newtab" class="hide">
+        <div class="title">FullScreen Click</div>
+        <label class="switch">
+            <input type="checkbox" value="true" id="NewTabClickInputCheckbox">
+            <span class="slider round"></span>
+        </label>
+        <div class="title">Show Time</div>
+        <label class="switch">
+            <input type="checkbox" value="true" id="ShowClockInputCheckbox">
+            <span class="slider round"></span>
+        </label>
     </div>
     <script src="../js/popup.js"></script>
 </body>
