--- a/html/popup.html
+++ b/html/popup.html
@@ -6,7 +6,10 @@
 </head>
 
 <body class="popup">
-    <div id="hostname" class="hostname">site.com</div>
+    <div id="hostname" class="hostname">Concentrate</div>
+    <div id="restricted" class="center hide">
+        <h2 class="lighten">Not Allowed</h2>
+    </div>
     <div id="content">
         <div class="title">DoubleClick</div>
         <label class="switch">
