--- a/html/options.html
+++ b/html/options.html
@@ -3,12 +3,9 @@
 <head>
     <title>Concentrate</title>
     <link rel="stylesheet" href="../css/index.css" type="text/css" />
-    <style>
-
-    </style>
 </head>
 
-<body>
+<body class="options">
     <div class="flex">
         <div>
             <div class="visual">
@@ -89,8 +86,3 @@
 </body>
 
 </html>
-
-<!-- 
-<div style="text-align: right; margin-top: 2%; padding-right: 10%;position: fixed; top:80%; left: 80%;">
-    <h1>Concentrate</h1>
-</div> -->
