--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,7 @@
 <body class="popup">
     <div id="hostname" class="hostname">Concentrate</div>
     <div id="restricted" class="center hide">
-        <h2 class="lighten">Not Allowed</h2>
+        <h2 class="lighten">Concentrate</h2>
     </div>
     <div id="content">
         <div class="title">DoubleClick</div>
