--- a/html/popup.html
+++ b/html/popup.html
@@ -7,9 +7,6 @@
 
 <body class="popup">
     <div id="hostname" class="hostname">Concentrate</div>
-    <div id="restricted" class="center hide">
-        <h2 class="lighten">Concentrate</h2>
-    </div>
     <div id="content">
         <div class="title">DoubleClick</div>
         <label class="switch">
@@ -59,6 +56,9 @@
             <input type="checkbox" value="true" id="ShowClockInputCheckbox">
             <span class="slider round"></span>
         </label>
+    </div>
+    <div id="restricted" class="center hide col">
+        <a class="lighten help" href="https://github.com/ruyd/ConcentrateExtension/issues" target="_blank">Help</a>
     </div>
     <script src="../js/popup.js"></script>
 </body>
