--- a/html/popup.html
+++ b/html/popup.html
@@ -43,7 +43,7 @@
             <div class="btn" id="slower">-</div>
             <div class="btn" id="faster">+</div>
         </div>
-        <div class="noselect">&nbsp;</div>
+        <div id="speed" class="noselect">&nbsp;</div>
     </div>
     <div id="newtab" class="hide">
         <div class="title">FullScreen Click</div>
