--- a/html/options.html
+++ b/html/options.html
@@ -46,7 +46,7 @@
                     <span class="slider round"></span>
                 </label>
 
-                <h3>Mute YouTube Video Ads</h3>
+                <h3>Mute Video Ads</h3>
                 <label class="switch">
                     <input type="checkbox" value="true" id="MutingOnInputCheckbox">
                     <span class="slider round"></span>
