--- a/html/popup.html
+++ b/html/popup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/index.css" type="text/css" />
 </head>
 
-<body class="popup">
+<body class="popup noselect">
     <div id="hostname" class="hostname">Concentrate</div>
     <div id="content">
         <div class="title">DoubleClick</div>
