--- a/html/popup.html
+++ b/html/popup.html
@@ -13,7 +13,7 @@
             <input type="checkbox" value="true" id="ContentDoubleClickInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div class="title">Remove Banner Ads</div>
+        <div class="title">Remove Ads</div>
         <label class="switch">
             <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
             <span class="slider round"></span>
