--- a/html/newtab.html
+++ b/html/newtab.html
@@ -1,23 +1,26 @@
 <html>
+
 <head>
     <title>&lrm;</title>
     <style>
         body {
             color: #242424;
-            background-color: #242424;                      
+            background-color: #242424;
         }
+
         div {
             font-size: 700%;
             transition: all 1s;
             position: fixed;
             top: 75%;
             right: 10%;
-            height: 150px; 
+            height: 150px;
             width: auto;
             user-select: none;
         }
+
         div:hover {
-            color: #1c1c1c;
+            color: #65509b;
         }
     </style>
 </head>
