--- a/html/popup.html
+++ b/html/popup.html
@@ -23,7 +23,7 @@
             <input type="checkbox" value="true" id="RemoveCommentsInputCheckbox">
             <span class="slider round"></span>
         </label>
-        <div class="title">Mute Video Ads</div>
+        <div class="title">Block Video Ads</div>
         <label class="switch">
             <input type="checkbox" value="true" id="MutingOnInputCheckbox">
             <span class="slider round"></span>
