--- a/html/options.html
+++ b/html/options.html
@@ -82,6 +82,9 @@
             </div>
         </div>
     </div>
+    <div style="position: fixed; bottom: 5%; right: 5%;">
+        <a class="help" href="https://github.com/ruyd/ConcentrateExtension/issues" target="_blank">Help</a>
+    </div>
     <script src="../js/options.js"></script>
 </body>
 
