--- a/html/options.html
+++ b/html/options.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </div>
-    <div style="position: fixed; bottom: 5%; right: 5%;">
+    <div class="help-container">
         <a class="help" href="https://github.com/ruyd/ConcentrateExtension/issues" target="_blank">Help</a>
     </div>
     <script src="../js/options.js"></script>
