--- a/html/newtab.html
+++ b/html/newtab.html
@@ -17,6 +17,7 @@
             height: 150px;
             width: auto;
             user-select: none;
+            cursor: none;
         }
 
         div:hover {
