--- a/html/options.html
+++ b/html/options.html
@@ -39,7 +39,7 @@
                     </label>
                 </div>
 
-                <h3>Remove Banner Ads</h3>
+                <h3>Remove Ads</h3>
 
                 <label class="switch">
                     <input type="checkbox" value="true" id="RemoveAdsInputCheckbox">
