--- a/html/options.html
+++ b/html/options.html
@@ -74,7 +74,7 @@
                     <input type="checkbox" value="true" id="NewTabClickInputCheckbox">
                     <span class="slider round"></span>
                 </label>
-                <h3>Hover to Reveal Time</h3>
+                <h3>Show Clock</h3>
                 <label class="switch">
                     <input type="checkbox" value="true" id="ShowClockInputCheckbox">
                     <span class="slider round"></span>
