--- a/html/popup.html
+++ b/html/popup.html
@@ -58,7 +58,10 @@
         </label>
     </div>
     <div id="restricted" class="center hide col">
+        <h2 class="lighten">Browser Controlled</h2>
+
         <a class="lighten help" href="https://github.com/ruyd/ConcentrateExtension/issues" target="_blank">Help</a>
+
     </div>
     <script src="../js/popup.js"></script>
 </body>
